test/error/E43.chigfn
{
	"type": "function",
	"description": "Prints Hello World",
	"name": "helloworld",
	"outputs": []
}
